2002-12-17  Morten Welinder  <terra@diku.dk>

	* src/value.c (value_new_from_string): Take new "translated"
	argument and respect it for booleans and errors.  All callers
	changed.

	* src/format.c (format_get_currency): Make really sure not to
	return NULL.

	* src/xml-io.c (xml_io_conventions): New function.
	(xml_parse_ctx_new): Add exprconv member to our context.
	(xml_parse_ctx_destroy): Free it.
	(xml_write_style, cb_xml_write_name, xml_read_names,
	xml_read_style, xml_write_cell_and_position,
	xml_cell_set_array_expr, xml_read_cell, xml_read_cell_copy): Use
	exprconv.
	(xml_cell_set_array_expr, xml_not_used_old_array_spec): Add parse
	context argument.  All callers changed.
	(xml_write_cell_and_position): Use value_get_as_gstring to get
	non-local error names.
	(xml_write_filter_expr): Ditto.

	* src/gutils.c (gnm_strunescape): New function.

	* src/parser.y (yylex): Handle error constants that don't end in
	"!", such as "#NAME?".  Catch unterminated error tokens.  Return
	token CONSTANT for errors.
	(find_matching_close): Use gnm_strunescape.
	(find_char): Delete.

	* src/value.c (value_get_as_gstring): Use untranslated error
	messages when requested.

2002-12-16  Morten Welinder  <terra@diku.dk>

	* src/number-match.c (format_match_init): Don't setup error
	variables any more.
	(gnumeric_error_init): Delete.

	* src/value.c (value_error_name): New function.

	* src/parse-util.c (def_expr_name_handler): Use value_error_name
	to get proper spelling of the REF error.

	* src/collect.c (float_range_function, float_range_function2,
	string_range_function): Take a GnmStdError, not a string.

	* src/value.c (value_error_classify): New function.

	* src/expr.c (gnm_expr_is_err): Take a GnmStdError, not a string.
	All callers changed.

	* src/value.c (value_init): Build table of translated error names.
	(value_shutdown): Tear it down.
	(value_new_error_NULL, value_new_error_DIV0,
	value_new_error_VALUE, value_new_error_REF, value_new_error_NAME,