@@ -166,7 +166,6 @@ GnmExprConventions *gnm_expr_conventions_new (void);
 void gnm_expr_conventions_free (GnmExprConventions *c);
 
 extern GnmExprConventions *gnm_expr_conventions_default;
-extern GnmExprConventions *gnm_expr_conventions_default_1_0;
 void parse_util_init (void);
 void parse_util_shutdown (void);
 
